# yamr

./: .travis.yml  CMakeLists.txt  README.md  data.h  main.cpp  map.cpp  map.h  map_reduce.cpp  map_reduce.h  my_handler_map.h  my_handler_reduce.h  reduce.cpp  reduce.h  shuffle.cpp  shuffle.h  utilites.h
